--- a/coding/topsis.ipynb
+++ b/coding/topsis.ipynb
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "data=pd.read_csv(\"data.csv\")\n",
+    "data=pd.read_csv(\"data_tops.csv\")\n",
     "print(data)"
    ]
   },
